--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       background: #ffffff;
       color: rgb(0, 0, 0);
       text-align: center;
-      padding: 15px;
+      padding: 4%;
       font-size: 20px;
       z-index: 1;
     }
@@ -27,7 +27,7 @@
     #chatbox {
       flex: 1;
       overflow-y: auto;
-      padding: 15px;
+      padding: 0% 15%;
       background: #ffffff;
     }
 
@@ -58,7 +58,7 @@
       position: sticky;
       bottom: 0;
       background: #ffffff;
-      padding: 10px;
+      padding: 1% 15%;
       border-top: 1px solid #ccc;
       display: flex;
       gap: 10px;
@@ -90,7 +90,7 @@
 <body>
 
   <header>
-    Fiend
+    <img src="fiend_logo.png" alt="Fiend Logo" style="height: 70px; vertical-align: middle;">
   </header>
 
   <div id="chatbox"></div>
