--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <body>
 
   <header>
-    <img src="fiend_logo.png" alt="Fiend Logo" style="height: 70px; vertical-align: middle;">
+    <img src="fiend_logo.png" alt="Fiend Logo" style="height: 8vh; vertical-align: middle;">
   </header>
 
   <div id="chatbox"></div>
